Checked day10 string distance

--- a/day10_string_distance/day10_hangle_levenshtein_with_inverted_index.ipynb
+++ b/day10_string_distance/day10_hangle_levenshtein_with_inverted_index.ipynb
@@ -13,18 +13,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.492\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import config\n",
+    "import sys\n",
+    "sys.path.append('./inverted_index_for_hangle_editdistance/')\n",
     "import fast_hangle_levenshtein"
    ]
   },
@@ -175,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query=아이코, candidates=5 -> 2, time=0.000212 sec.\n"
+      "query=아이코, candidates=5 -> 2, time=0.000342 sec.\n"
      ]
     },
     {
@@ -203,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query=아이코, candidates=8 -> 3, time=0.000852 sec.\n"
+      "query=아이코, candidates=8 -> 3, time=0.000841 sec.\n"
      ]
     },
     {
@@ -316,13 +308,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query=분식회계, candidates=10137 -> 7, time=0.00481 sec.\n"
+      "query=분식회계, candidates=10137 -> 7, time=0.00473 sec.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[('분식회계', 0), ('분식회계설', 1), ('분식회', 1), ('분석회계', 1)]"
+       "[('분식회계', 0), ('분식회계설', 1), ('분석회계', 1), ('분식회', 1)]"
       ]
      },
      "execution_count": 13,
@@ -344,13 +336,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query=분식회계a, candidates=10451 -> 3, time=0.00421 sec.\n"
+      "query=분식회계a, candidates=10451 -> 3, time=0.00401 sec.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[('분식회계', 1), ('분식회계설', 1)]"
+       "[('분식회계설', 1), ('분식회계', 1)]"
       ]
      },
      "execution_count": 14,
@@ -378,7 +370,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query=분식회계, candidates=129099 -> 412, time=0.352 sec.\n"
+      "query=분식회계, candidates=129099 -> 412, time=0.398 sec.\n"
      ]
     },
     {
@@ -417,7 +409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query=분식회계, candidates=129099 -> 4, time=0.265 sec.\n"
+      "query=분식회계, candidates=129099 -> 4, time=0.199 sec.\n"
      ]
     },
     {
@@ -496,7 +488,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "search time = 19.79 sec\n",
+      "search time = 19.88 sec\n",
       "[('분식회계', 0), ('분석회계', 0.3333333333333333), ('부실회계', 0.6666666666666666), ('분식회', 1), ('분석체계', 1.0), ('분식회계설', 1)]\n"
      ]
     }
