--- a/day10_string_distance/day10_string_distance.ipynb
+++ b/day10_string_distance/day10_string_distance.ipynb
@@ -1,24 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.492\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
-   "source": [
-    "import config"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -62,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +266,7 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,14 +326,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a', 'b', 'c'}\n",
+      "{'c', 'b', 'a'}\n",
       "{'a'}\n"
      ]
     }
@@ -363,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -393,13 +375,13 @@
      "output_type": "stream",
      "text": [
       "unigram unit\n",
-      "  - unit of s1 = {'살', '지', '금', '자'}\n",
-      "  - unit of s2 = {'자', '지', '금', '살'}\n",
+      "  - unit of s1 = {'자', '살', '지', '금'}\n",
+      "  - unit of s2 = {'자', '살', '지', '금'}\n",
       "distance = 0.0\n",
       "\n",
       "bigram unit\n",
-      "  - unit of s1 = {'금지', '자살', '살금'}\n",
-      "  - unit of s2 = {'살자', '금살', '지금'}\n",
+      "  - unit of s1 = {'금지', '살금', '자살'}\n",
+      "  - unit of s2 = {'금살', '지금', '살자'}\n",
       "distance = 1.0\n",
       "\n",
       "edit distance = 4\n"
@@ -440,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +431,7 @@
        "Counter({'a': 1, 'b': 1, 'c': 2})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -514,8 +496,8 @@
       "  - unit of s2 = Counter({'이': 2, '대': 1, '타': 1, '마': 1, '닝': 1})\n",
       "distance = 0.25\n",
       "\n",
-      "  - unit of s1 = Counter({'데이': 1, '터마': 1, '마이': 1, '이닝': 1, '이터': 1})\n",
-      "  - unit of s2 = Counter({'타마': 1, '마이': 1, '이닝': 1, '이타': 1, '대이': 1})\n",
+      "  - unit of s1 = Counter({'이닝': 1, '마이': 1, '데이': 1, '이터': 1, '터마': 1})\n",
+      "  - unit of s2 = Counter({'이닝': 1, '타마': 1, '마이': 1, '대이': 1, '이타': 1})\n",
       "distance = 0.6\n",
       "\n",
       "jaccard distance = 0.5714285714285714\n"
@@ -547,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -613,6 +595,13 @@
     "print('jaccard w 1syllable: %.3f' %  jaccard_distance(s1, s2))\n",
     "print('jaccard w 2syllable: %.3f' %  jaccard_distance(s1, s2, bigram))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
