Checked day10 nearest neighbor search

--- a/day10_neighbor_search/day10_develop_lsh.ipynb
+++ b/day10_neighbor_search/day10_develop_lsh.ipynb
@@ -17,21 +17,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "soynlp=0.0.492\n",
-      "added lovit_textmining_dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import config\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import normalize\n",
-    "from navernews_10days import get_bow\n",
+    "from lovit_textmining_dataset.navernews_10days import get_bow\n",
     "\n",
     "X, idx_to_vocab, vocab_to_idx = get_bow(date='2016-10-20', tokenize='noun')"
    ]
@@ -100,7 +90,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.00052057])"
+       "array([0.01365153])"
       ]
      },
      "execution_count": 4,
@@ -161,8 +151,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-1.23522713, -2.31475906, -2.45704571,  3.02593109,  0.01352958,\n",
-       "       -1.19656845, -1.11870652, -0.61412234,  2.40003218,  0.74038135])"
+       "array([-2.24423257, -0.13922416,  0.39920841, -4.25557761, -2.9478034 ,\n",
+       "       -5.73837581, -1.00782216, -2.86794736, -0.70919218,  1.64046998])"
       ]
      },
      "execution_count": 6,
@@ -182,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-1, -2, -2,  3,  0, -1, -1,  0,  2,  0])"
+       "array([-2,  0,  0, -4, -2, -5, -1, -2,  0,  1])"
       ]
      },
      "execution_count": 7,
@@ -209,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-1, -1, -1,  1,  0, -1, -1,  0,  1,  0])"
+       "array([-1,  0,  0, -1, -1, -1, -1, -1,  0,  1])"
       ]
      },
      "execution_count": 8,
@@ -286,23 +276,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, -1, -1, -1, 1, 1, -1, -1, -1, 1) has 116 items\n",
-      "(1, -1, 1, -1, 1, -1, 1, -1, 1, 1) has 155 items\n",
-      "(-1, -1, -1, 1, 1, 1, 1, 1, 1, -1) has 127 items\n",
-      "(-1, 1, -1, -1, 1, -1, 1, -1, 1, 1) has 810 items\n",
-      "(-1, -1, -1, 1, 1, 1, 1, 1, 1, 1) has 120 items\n",
-      "(1, 1, -1, 1, -1, 1, 1, -1, -1, 1) has 120 items\n",
-      "(1, -1, -1, -1, 1, 1, 1, -1, -1, 1) has 189 items\n",
-      "(1, 1, -1, 1, 1, 1, 1, -1, -1, 1) has 186 items\n",
-      "(1, -1, -1, 1, 1, 1, 1, -1, -1, 1) has 123 items\n",
-      "(1, 1, -1, -1, -1, 1, 1, -1, -1, 1) has 155 items\n",
-      "(-1, 1, -1, -1, 1, -1, -1, -1, 1, 1) has 998 items\n",
-      "(1, 1, 1, -1, -1, 1, 1, -1, -1, 1) has 136 items\n",
-      "(-1, -1, 1, 1, -1, 1, 1, -1, -1, 1) has 173 items\n",
-      "(1, 1, -1, -1, 1, 1, 1, -1, -1, 1) has 122 items\n",
-      "(1, -1, -1, -1, -1, 1, -1, -1, -1, 1) has 108 items\n",
-      "(-1, -1, 1, 1, 1, 1, 1, -1, -1, 1) has 184 items\n",
-      "(-1, 1, 1, -1, -1, 1, 1, -1, -1, 1) has 119 items\n"
+      "(-1, -1, -1, -1, -1, -1, -1, -1, -1, -1) has 1121 items\n",
+      "(-1, -1, -1, -1, -1, -1, -1, -1, -1, 1) has 197 items\n",
+      "(1, -1, -1, -1, -1, 1, -1, -1, -1, -1) has 126 items\n",
+      "(-1, -1, -1, -1, 1, 1, 1, -1, -1, -1) has 119 items\n",
+      "(-1, -1, -1, -1, -1, 1, 1, -1, -1, -1) has 113 items\n",
+      "(-1, -1, -1, 1, -1, -1, 1, -1, -1, 1) has 138 items\n",
+      "(1, -1, -1, -1, -1, 1, 1, -1, -1, -1) has 124 items\n",
+      "(-1, 1, -1, 1, -1, -1, -1, -1, 1, -1) has 101 items\n",
+      "(-1, -1, -1, -1, -1, -1, -1, 1, -1, -1) has 101 items\n",
+      "(1, -1, -1, -1, -1, -1, -1, -1, -1, -1) has 117 items\n",
+      "(1, 1, -1, -1, -1, -1, -1, -1, -1, 1) has 128 items\n",
+      "(1, -1, 1, -1, -1, -1, -1, -1, -1, -1) has 123 items\n",
+      "(1, -1, -1, 1, 1, 1, 1, -1, -1, -1) has 116 items\n",
+      "(-1, -1, -1, -1, -1, 1, -1, -1, -1, -1) has 133 items\n",
+      "(1, -1, -1, -1, 1, 1, 1, -1, -1, -1) has 230 items\n",
+      "(-1, -1, -1, -1, 1, -1, -1, -1, -1, -1) has 133 items\n",
+      "(-1, -1, -1, -1, 1, -1, 1, -1, -1, 1) has 150 items\n",
+      "(-1, -1, -1, 1, 1, 1, -1, -1, 1, -1) has 150 items\n",
+      "(1, -1, -1, 1, 1, 1, 1, -1, 1, 1) has 133 items\n",
+      "(-1, -1, 1, -1, -1, 1, 1, -1, -1, -1) has 101 items\n",
+      "(-1, -1, -1, 1, -1, 1, -1, -1, 1, -1) has 120 items\n",
+      "(1, -1, 1, -1, -1, 1, -1, -1, -1, -1) has 110 items\n",
+      "(1, -1, -1, -1, 1, -1, 1, -1, -1, -1) has 114 items\n",
+      "(-1, -1, -1, -1, -1, -1, -1, -1, 1, -1) has 610 items\n",
+      "(1, -1, -1, 1, -1, 1, 1, -1, -1, -1) has 141 items\n",
+      "(1, 1, -1, -1, -1, -1, -1, -1, -1, -1) has 114 items\n",
+      "(-1, 1, -1, 1, 1, 1, -1, -1, 1, -1) has 110 items\n",
+      "(-1, 1, -1, 1, -1, 1, -1, -1, 1, -1) has 107 items\n",
+      "(-1, -1, -1, -1, -1, -1, 1, -1, -1, -1) has 112 items\n",
+      "(-1, 1, -1, 1, 1, -1, -1, -1, 1, -1) has 161 items\n",
+      "(-1, -1, -1, 1, -1, -1, -1, -1, 1, -1) has 211 items\n",
+      "(-1, -1, -1, -1, 1, -1, 1, -1, -1, -1) has 194 items\n",
+      "(-1, -1, -1, 1, 1, -1, -1, -1, 1, -1) has 228 items\n",
+      "(-1, 1, -1, -1, -1, -1, 1, -1, 1, 1) has 184 items\n"
      ]
     }
    ],
@@ -326,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from navernews_10days import get_news_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_news_paths\n",
     "from soynlp.utils import DoublespaceLineCorpus\n",
     "\n",
     "path = get_news_paths(date='2016-10-20')\n",
@@ -432,8 +439,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.63 s, sys: 28 ms, total: 3.66 s\n",
-      "Wall time: 648 ms\n"
+      "CPU times: user 636 ms, sys: 64 ms, total: 700 ms\n",
+      "Wall time: 698 ms\n"
      ]
     }
    ],
@@ -471,9 +478,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num candidatse = 272\n",
-      "CPU times: user 36 ms, sys: 0 ns, total: 36 ms\n",
-      "Wall time: 5.58 ms\n"
+      "num candidatse = 460\n",
+      "CPU times: user 8 ms, sys: 0 ns, total: 8 ms\n",
+      "Wall time: 7.43 ms\n"
      ]
     }
    ],
@@ -494,23 +501,23 @@
      "text": [
       "[idx = 15, cos = 1.0] 클린턴 득표율 50 목표 가능성 아주 크다  워싱턴 연합뉴스 강영두 특파원 미국 민주당 대선후보 힐러리 클린턴이 다음달 8일 대선에서 400명 이상의 선거인단을 확보하면서 대승을 거둘 수 있다는 분석이 나왔다  미국 민주당 대선후보 힐러리 클린턴이 지난 10일 현지시간 오하이오 주 콜럼버스에서 유세하는 모습 연합뉴스  미 공화당 전략가인 스티브 슈미트는 1 ...\n",
       "\n",
-      "[idx = 15006, cos = 0.846] 미국 민주당 대선후보 힐러리 클린턴이 다음달 8일 대선에서 400명 이상의 선거인단을 확보하면서 대승을 거둘 수 있다는 분석이 나왔다  미 공화당 전략가인 스티브 슈미트는 현지시간 19일 방송의 모닝조 프로그램 인터뷰에서 이 같이 전망했다 슈미트는 2008년 존 매케인의 대선캠프에 관여했다 간접선거인 미 대선에서 승리에 필요한 선거인단 매직 넘버 는 전체  ...\n",
+      "[idx = 7421, cos = 0.74] 여론조사서는 304명 확보 예상  힐러리 클린턴 미국 민주당 대선후보가 다음달 8일 대선에서 과반은 물론 선거인단의 4분의 3 이상 확보할 것이라는 분석이 공화당에서 나왔다  미 공화당 전략가인 스티브 슈미트는 19일 현지시간 방송과의 인터뷰에서 이같이 전망했다 그는 지난 2008년 대선 당시 공화당 후보였던 존 메케인 캠프에 관여한 인물이다  그는 현 상 ...\n",
       "\n",
-      "[idx = 11309, cos = 0.698] 공화 상 하원선거도 고전할 듯 2016년 미국 대선이 19일 앞으로 다가온 가운데 민주당 후보 힐러리 클린턴 전 국무장관이 400명 이상의 선거인단을 확보해 압승을 거둘 것이라는 전망이 제기됐다 미 공화당 전략가인 스티브 슈밋은 19일 방송의 모닝조 프로그램에 출연 클린턴이 당선 매직넘버인 선거인단 270명을 훌쩍 넘어선 400명을 확보해 공화당 도널드 트 ...\n",
+      "[idx = 13752, cos = 0.632] 미 대선 3주 앞 판세 분석  미국 대선을 3주일 앞두고 치러진 19일 현지시간 의 마지막 대선후보 토론을 가리켜 정치전문매체 폴리티코 등은 공화당 도널드 트럼프 후보의 생사의 순간 이라 불렀다 트럼프는 앞선 두 번의 토론에 비해 민주당 힐러리 클린턴 후보에 대한 인신공격을 자제하고 차분하게 말하려 작심한 기색이 역력했다 하지만 판세를 뒤집기에는 역부족이었 ...\n",
       "\n",
-      "[idx = 17330, cos = 0.484] 워싱턴 노컷뉴스 임미현 특파원 미국 공화당 대선 후보 도널드 트럼프가 대선 결과에 불복할 수 있음을 시사해 파장이 일고 있다  트럼프는 19일 현지시간 네바다주 라스베이거스 네바다 대학에서 열린 3차 토론에서 대선에서 패배할 경우 결과에 승복하겠느냐는 사회자 크리스 윌리스의 질문에 그때 가서 말하겠다 고 답했다  트럼프는 대선 결과를 받아들이는 미국의 전통 ...\n",
+      "[idx = 7563, cos = 0.57] 공화당 텃밭서도 우세 유타 주는 맥멀린 1위 이변  19일 현지시간 미국 라스베이거스 네바다주에서 3차 토론을 벌이고 있는 힐러리 클린턴 오른쪽 민주당 후보와 도널드 트럼프 공화당 후보 라스베이거스 연합뉴스  11월 8일 치러질 미국 대통령 선거를 3주 앞두고 민주당 힐러리 클린턴 후보의 지지율이 주요 경합주에서 도널드 트럼프 공화당 후보를 앞서고 있다   ...\n",
       "\n",
-      "[idx = 1281, cos = 0.468] 1차 2차 3차로 갈수록 격차 좁혀져 3차 토론 가장 근소한 차  마지막 토론도 힐러리 승 52 대 39 라스베이거스 연합뉴스 19일 현지시간 미국 라스베이거스 네바다대학에서 열린 대선후보 3차 토론에서 민주당 대선후보 힐러리 클린턴이 공화당 대선후보 도널드 트럼프를 이긴 것으로 나타났다 방송은 토론 직후 시청자를 대상으로 여론조사를 실시한 결과 52 가  ...\n",
+      "[idx = 558, cos = 0.567] 클린턴 공화당 텃밭서도 우세 유타 맥멀린 1위 이변  현재 지지율 호감도 1월 수준으로 회귀  서울 연합뉴스 김남권 기자 미국 대선 11월 8일 을 3주 앞둔 시점에서 민주당 힐러리 클린턴이 공화당의 도널드 트럼프에 전국은 물론 주요 경합주 지지율 면에서도 앞서가고 있다  공화당의 텃밭으로 불리는 유타 주에서 무소속 후보 에번 맥멀린이 1위에 나섰다는 여론 ...\n",
       "\n",
-      "[idx = 9774, cos = 0.467] 헤럴드경제 문재연 기자 로비업체 그룹의 회장인 에드 로저스는 워싱턴포스트 와 포스트파티션 블로그 에 19일 현지시간 치러진 3차 대선 토론의 승자를 공화당 대선후보 도널드 트럼프로 꼽았다 하지만 오는 11월 8일 대선의 판세를 가를 만큼 트럼프가 선전하지는 못했다며 클린턴의 우승 가능성을 시사했다  지난 토론과 비교해 민주당 대선후보 힐러리 클린턴의 발언에 ...\n",
+      "[idx = 16858, cos = 0.526] 워싱턴 연합뉴스 미국 공화당 전략가인 스티브 슈미트는 19일 현지시간 방송의 모닝조 프로그램 인터뷰에서 현 추세로 볼 때 민주당 대선후보 힐러리 클린턴이 대선에서 400명 이상의 선거인단을 확보하면서 대승을 거둘 수 있을 것이라고 전망했다 사진은 힐러리가 지난 13일 샌프란시스코에서 유세하는 모습 ...\n",
       "\n",
-      "[idx = 29096, cos = 0.463] 미국 대선 마지막 승부처 굳히기 뒤집기  앵커  오늘 20일 오전 10시부터 90분간 미국 대선후보간 3차 토론이 열립니다  민주당 힐러리 클린턴이 승기를 굳힐지 공화당 도널드 트럼프가 뒤집기 성공할지 마지막 승부처라고 할 수 있습니다  워싱턴에서 김범현 특파원입니다  기자  미국 라스베이거스에 위치한 네바다대학은 민주당 힐러리 클린턴 공화당 도널드 트럼프 ...\n",
+      "[idx = 7558, cos = 0.465] 클린턴 후보는 와 끝까지 싸워야 하는 것은 맞다 면서도 시리아 안에 아직 많은 난민들이 존재한다 여성이나 아이들을 두고 문을 닫을 수는 없다 며 이 같이 밝혔다 이어 이슬람국가 와 같은 극단주의 무장단체와의 연계성을 철저하게 살핀 이후에 받아들이겠다는 입장을 강조했다  트럼프는 클린턴 측과 미디어가 한편이 돼 선거를 조작했다는 주장과 관련 대선결과에 승복하 ...\n",
       "\n",
-      "[idx = 9434, cos = 0.461] 헤럴드경제 문재연 기자 또 한번의 추잡한 설전만 오고갈 것인가 아니면 미국의 미래 를 논하는 공론장이 형성될 것인가 미국 대선 마지막 3차 토론이 19일 현지시간 오후 9시 동부시간 기준 네바다 주 라스베이가스 네바다 대학에서 열릴 예정이다 이날 토론에서는 이민과 복지 경제 외교 대통령의 자질 그리고 대법원 인사 등 미국 정책의 방향을 결정할 주요 의제가  ...\n",
+      "[idx = 6906, cos = 0.446] 19일 현지시간 미국 네바다 주 라스베이거스 네바다대학에서 끝난 미국 대통령 선거 3차 토론의 승자는 민주당의 후보 힐러리 클린턴 전 국무장관으로 나타났다  미국 방송이 토론 직후 와 공동으로 벌인 여론조사에서 응답자의 52 가 클린턴을 승자로 꼽았다 공화당 대선 후보인 도널드 트럼프를 승자로 택한 응답자는 39 에 그쳤다  트럼프를 겨냥한 클린턴 후보의  ...\n",
       "\n",
-      "[idx = 15632, cos = 0.459] 미대선 3차 토론 승자 힐러리 클린턴 우승 굳히기 들어가  미대선 3차 토론 사진 연합뉴스  19일 현지시간 미국 네바다 주 라스베이거스 네바다대학에서 끝난 미국 대통령 선거 3차 토론의 승자는 민주당의 후보 힐러리 클린턴 전 국무장관으로 나타났습니다  미국 방송이 토론 직후 와 공동으로 토론 시청자를 대상으로 벌인 여론조사에서 응답자의 52 가 클린턴을  ...\n",
+      "[idx = 27797, cos = 0.434] 미국 대선 3차 토론이 끝난 19일 현지시간 도널드 트럼프 공화당 대통령 후보와 힐러리 클린턴 민주당 대통령 후보가 토론장을 나설 채비를 하고 있다 뉴스1  대선 3차 토론  과거 비해 정제됐지만 열띤 명대사 난립  서울 뉴스1 김혜지 기자 미국 대선의 마지막 토론이 19일 현지시간 유세 막바지를 화려하게 장식하며 끝났다  공화 민주 양당 대통령 후보인 도 ...\n",
       "\n",
-      "[idx = 17339, cos = 0.458] 3차 토론 뒤 여론조사 누가 더 진실한 후보 질문엔 트럼프가 앞서기도  노컷뉴스 김중호 기자 트럼프 미 공화당 대선후보 와 클린턴 미 민주당 대선후보 사진 유튜브 화면 캡처 3차 토론 뒤 여론조사에서도 힐러리 클린턴이 승리했다는 답변이 많았지만 그 격차는 더욱 좁혀졌다  19일 현지시간 미국 네바다 주 라스베이거스 네바다대학에서 끝난 미국 대통령 선거 3차 ...\n",
+      "[idx = 3686, cos = 0.431] 라스베이거스 뉴시스 힐러리 클린턴 미국 민주당 대선후보와 도널드 트럼프 공화당 후보가 19일 현지시간 네바다주 라스베이거스에서 마지막 3차 토론을 벌이고 있다 2016 10 20  서울 뉴시스 권성근 기자 미국 대선후보 3차 토론이 19일 현지시간 네바다주 라스베이거스 네바다대학에서 마무리됐다  오는 11월8일 치러지는 대선 전 마지막인 이번 토론에서 공화 ...\n",
       "\n"
      ]
     }
@@ -538,7 +545,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/base.py:253: UserWarning: Trying to unpickle estimator NMF from version 0.20.0 when using version 0.20.3. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/utils/deprecation.py:144: FutureWarning: The sklearn.decomposition.nmf module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.decomposition. Anything that cannot be imported from sklearn.decomposition is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n",
+      "/home/lovit/anaconda3/envs/pytorch/lib/python3.7/site-packages/sklearn/base.py:318: UserWarning: Trying to unpickle estimator NMF from version 0.21.3 when using version 0.22.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
       "  UserWarning)\n"
      ]
     },
@@ -555,7 +564,7 @@
    ],
    "source": [
     "import pickle\n",
-    "with open('../day5_topicmodeling/2016-10-20-nmf.pkl', 'rb') as f:\n",
+    "with open('../day05_topicmodeling/2016-10-20-nmf.pkl', 'rb') as f:\n",
     "    nmf_model = pickle.load(f)\n",
     "components = nmf_model.components_\n",
     "components.shape"
@@ -577,7 +586,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 4 9 8 6 1 5 3 0 7]\n"
+      "[5 1 8 3 9 0 6 2 7 4]\n"
      ]
     }
    ],
@@ -643,9 +652,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num candidatse = 272\n",
-      "CPU times: user 20 ms, sys: 0 ns, total: 20 ms\n",
-      "Wall time: 3.72 ms\n"
+      "num candidatse = 460\n",
+      "CPU times: user 4 ms, sys: 0 ns, total: 4 ms\n",
+      "Wall time: 4.24 ms\n"
      ]
     }
    ],
@@ -666,23 +675,23 @@
      "text": [
       "[idx = 15, cos = 1.0] 클린턴 득표율 50 목표 가능성 아주 크다  워싱턴 연합뉴스 강영두 특파원 미국 민주당 대선후보 힐러리 클린턴이 다음달 8일 대선에서 400명 이상의 선거인단을 확보하면서 대승을 거둘 수 있다는 분석이 나왔다  미국 민주당 대선후보 힐러리 클린턴이 지난 10일 현지시간 오하이오 주 콜럼버스에서 유세하는 모습 연합뉴스  미 공화당 전략가인 스티브 슈미트는 1 ...\n",
       "\n",
-      "[idx = 15006, cos = 0.846] 미국 민주당 대선후보 힐러리 클린턴이 다음달 8일 대선에서 400명 이상의 선거인단을 확보하면서 대승을 거둘 수 있다는 분석이 나왔다  미 공화당 전략가인 스티브 슈미트는 현지시간 19일 방송의 모닝조 프로그램 인터뷰에서 이 같이 전망했다 슈미트는 2008년 존 매케인의 대선캠프에 관여했다 간접선거인 미 대선에서 승리에 필요한 선거인단 매직 넘버 는 전체  ...\n",
+      "[idx = 7421, cos = 0.74] 여론조사서는 304명 확보 예상  힐러리 클린턴 미국 민주당 대선후보가 다음달 8일 대선에서 과반은 물론 선거인단의 4분의 3 이상 확보할 것이라는 분석이 공화당에서 나왔다  미 공화당 전략가인 스티브 슈미트는 19일 현지시간 방송과의 인터뷰에서 이같이 전망했다 그는 지난 2008년 대선 당시 공화당 후보였던 존 메케인 캠프에 관여한 인물이다  그는 현 상 ...\n",
       "\n",
-      "[idx = 11309, cos = 0.698] 공화 상 하원선거도 고전할 듯 2016년 미국 대선이 19일 앞으로 다가온 가운데 민주당 후보 힐러리 클린턴 전 국무장관이 400명 이상의 선거인단을 확보해 압승을 거둘 것이라는 전망이 제기됐다 미 공화당 전략가인 스티브 슈밋은 19일 방송의 모닝조 프로그램에 출연 클린턴이 당선 매직넘버인 선거인단 270명을 훌쩍 넘어선 400명을 확보해 공화당 도널드 트 ...\n",
+      "[idx = 13752, cos = 0.632] 미 대선 3주 앞 판세 분석  미국 대선을 3주일 앞두고 치러진 19일 현지시간 의 마지막 대선후보 토론을 가리켜 정치전문매체 폴리티코 등은 공화당 도널드 트럼프 후보의 생사의 순간 이라 불렀다 트럼프는 앞선 두 번의 토론에 비해 민주당 힐러리 클린턴 후보에 대한 인신공격을 자제하고 차분하게 말하려 작심한 기색이 역력했다 하지만 판세를 뒤집기에는 역부족이었 ...\n",
       "\n",
-      "[idx = 17330, cos = 0.484] 워싱턴 노컷뉴스 임미현 특파원 미국 공화당 대선 후보 도널드 트럼프가 대선 결과에 불복할 수 있음을 시사해 파장이 일고 있다  트럼프는 19일 현지시간 네바다주 라스베이거스 네바다 대학에서 열린 3차 토론에서 대선에서 패배할 경우 결과에 승복하겠느냐는 사회자 크리스 윌리스의 질문에 그때 가서 말하겠다 고 답했다  트럼프는 대선 결과를 받아들이는 미국의 전통 ...\n",
+      "[idx = 7563, cos = 0.57] 공화당 텃밭서도 우세 유타 주는 맥멀린 1위 이변  19일 현지시간 미국 라스베이거스 네바다주에서 3차 토론을 벌이고 있는 힐러리 클린턴 오른쪽 민주당 후보와 도널드 트럼프 공화당 후보 라스베이거스 연합뉴스  11월 8일 치러질 미국 대통령 선거를 3주 앞두고 민주당 힐러리 클린턴 후보의 지지율이 주요 경합주에서 도널드 트럼프 공화당 후보를 앞서고 있다   ...\n",
       "\n",
-      "[idx = 1281, cos = 0.468] 1차 2차 3차로 갈수록 격차 좁혀져 3차 토론 가장 근소한 차  마지막 토론도 힐러리 승 52 대 39 라스베이거스 연합뉴스 19일 현지시간 미국 라스베이거스 네바다대학에서 열린 대선후보 3차 토론에서 민주당 대선후보 힐러리 클린턴이 공화당 대선후보 도널드 트럼프를 이긴 것으로 나타났다 방송은 토론 직후 시청자를 대상으로 여론조사를 실시한 결과 52 가  ...\n",
+      "[idx = 558, cos = 0.567] 클린턴 공화당 텃밭서도 우세 유타 맥멀린 1위 이변  현재 지지율 호감도 1월 수준으로 회귀  서울 연합뉴스 김남권 기자 미국 대선 11월 8일 을 3주 앞둔 시점에서 민주당 힐러리 클린턴이 공화당의 도널드 트럼프에 전국은 물론 주요 경합주 지지율 면에서도 앞서가고 있다  공화당의 텃밭으로 불리는 유타 주에서 무소속 후보 에번 맥멀린이 1위에 나섰다는 여론 ...\n",
       "\n",
-      "[idx = 9774, cos = 0.467] 헤럴드경제 문재연 기자 로비업체 그룹의 회장인 에드 로저스는 워싱턴포스트 와 포스트파티션 블로그 에 19일 현지시간 치러진 3차 대선 토론의 승자를 공화당 대선후보 도널드 트럼프로 꼽았다 하지만 오는 11월 8일 대선의 판세를 가를 만큼 트럼프가 선전하지는 못했다며 클린턴의 우승 가능성을 시사했다  지난 토론과 비교해 민주당 대선후보 힐러리 클린턴의 발언에 ...\n",
+      "[idx = 16858, cos = 0.526] 워싱턴 연합뉴스 미국 공화당 전략가인 스티브 슈미트는 19일 현지시간 방송의 모닝조 프로그램 인터뷰에서 현 추세로 볼 때 민주당 대선후보 힐러리 클린턴이 대선에서 400명 이상의 선거인단을 확보하면서 대승을 거둘 수 있을 것이라고 전망했다 사진은 힐러리가 지난 13일 샌프란시스코에서 유세하는 모습 ...\n",
       "\n",
-      "[idx = 29096, cos = 0.463] 미국 대선 마지막 승부처 굳히기 뒤집기  앵커  오늘 20일 오전 10시부터 90분간 미국 대선후보간 3차 토론이 열립니다  민주당 힐러리 클린턴이 승기를 굳힐지 공화당 도널드 트럼프가 뒤집기 성공할지 마지막 승부처라고 할 수 있습니다  워싱턴에서 김범현 특파원입니다  기자  미국 라스베이거스에 위치한 네바다대학은 민주당 힐러리 클린턴 공화당 도널드 트럼프 ...\n",
+      "[idx = 7558, cos = 0.465] 클린턴 후보는 와 끝까지 싸워야 하는 것은 맞다 면서도 시리아 안에 아직 많은 난민들이 존재한다 여성이나 아이들을 두고 문을 닫을 수는 없다 며 이 같이 밝혔다 이어 이슬람국가 와 같은 극단주의 무장단체와의 연계성을 철저하게 살핀 이후에 받아들이겠다는 입장을 강조했다  트럼프는 클린턴 측과 미디어가 한편이 돼 선거를 조작했다는 주장과 관련 대선결과에 승복하 ...\n",
       "\n",
-      "[idx = 9434, cos = 0.461] 헤럴드경제 문재연 기자 또 한번의 추잡한 설전만 오고갈 것인가 아니면 미국의 미래 를 논하는 공론장이 형성될 것인가 미국 대선 마지막 3차 토론이 19일 현지시간 오후 9시 동부시간 기준 네바다 주 라스베이가스 네바다 대학에서 열릴 예정이다 이날 토론에서는 이민과 복지 경제 외교 대통령의 자질 그리고 대법원 인사 등 미국 정책의 방향을 결정할 주요 의제가  ...\n",
+      "[idx = 6906, cos = 0.446] 19일 현지시간 미국 네바다 주 라스베이거스 네바다대학에서 끝난 미국 대통령 선거 3차 토론의 승자는 민주당의 후보 힐러리 클린턴 전 국무장관으로 나타났다  미국 방송이 토론 직후 와 공동으로 벌인 여론조사에서 응답자의 52 가 클린턴을 승자로 꼽았다 공화당 대선 후보인 도널드 트럼프를 승자로 택한 응답자는 39 에 그쳤다  트럼프를 겨냥한 클린턴 후보의  ...\n",
       "\n",
-      "[idx = 15632, cos = 0.459] 미대선 3차 토론 승자 힐러리 클린턴 우승 굳히기 들어가  미대선 3차 토론 사진 연합뉴스  19일 현지시간 미국 네바다 주 라스베이거스 네바다대학에서 끝난 미국 대통령 선거 3차 토론의 승자는 민주당의 후보 힐러리 클린턴 전 국무장관으로 나타났습니다  미국 방송이 토론 직후 와 공동으로 토론 시청자를 대상으로 벌인 여론조사에서 응답자의 52 가 클린턴을  ...\n",
+      "[idx = 27797, cos = 0.434] 미국 대선 3차 토론이 끝난 19일 현지시간 도널드 트럼프 공화당 대통령 후보와 힐러리 클린턴 민주당 대통령 후보가 토론장을 나설 채비를 하고 있다 뉴스1  대선 3차 토론  과거 비해 정제됐지만 열띤 명대사 난립  서울 뉴스1 김혜지 기자 미국 대선의 마지막 토론이 19일 현지시간 유세 막바지를 화려하게 장식하며 끝났다  공화 민주 양당 대통령 후보인 도 ...\n",
       "\n",
-      "[idx = 17339, cos = 0.458] 3차 토론 뒤 여론조사 누가 더 진실한 후보 질문엔 트럼프가 앞서기도  노컷뉴스 김중호 기자 트럼프 미 공화당 대선후보 와 클린턴 미 민주당 대선후보 사진 유튜브 화면 캡처 3차 토론 뒤 여론조사에서도 힐러리 클린턴이 승리했다는 답변이 많았지만 그 격차는 더욱 좁혀졌다  19일 현지시간 미국 네바다 주 라스베이거스 네바다대학에서 끝난 미국 대통령 선거 3차 ...\n",
+      "[idx = 3686, cos = 0.431] 라스베이거스 뉴시스 힐러리 클린턴 미국 민주당 대선후보와 도널드 트럼프 공화당 후보가 19일 현지시간 네바다주 라스베이거스에서 마지막 3차 토론을 벌이고 있다 2016 10 20  서울 뉴시스 권성근 기자 미국 대선후보 3차 토론이 19일 현지시간 네바다주 라스베이거스 네바다대학에서 마무리됐다  오는 11월8일 치러지는 대선 전 마지막인 이번 토론에서 공화 ...\n",
       "\n"
      ]
     }
@@ -691,6 +700,13 @@
     "for d, idx in zip(dist, idxs):\n",
     "    print('[idx = {}, cos = {:.3}] {} ...\\n'.format(idx, 1 - d, docs[idx][:200]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
