--- a/day10_neighbor_search/day10_network_based_similarity_search.ipynb
+++ b/day10_neighbor_search/day10_network_based_similarity_search.ipynb
@@ -16,16 +16,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "soynlp=0.0.492\n",
-      "added lovit_textmining_dataset\n",
       "(30091, 9774)\n"
      ]
     }
    ],
    "source": [
-    "import config\n",
     "import sklearn\n",
-    "from navernews_10days import get_bow, get_news_paths\n",
+    "from lovit_textmining_dataset.navernews_10days import get_bow, get_news_paths\n",
     "from soynlp.utils import DoublespaceLineCorpus\n",
     "\n",
     "x, idx_to_vocab, vocab_to_idx = get_bow(date='2016-10-20', tokenize='noun')\n",
@@ -52,7 +49,7 @@
      "output_type": "stream",
      "text": [
       "Indexing ...\n",
-      "batch 16 / 16 done. computation time = 101.185017 sec.\n",
+      "batch 16 / 16 done. computation time = 181.639558 sec.\n",
       "Indexing was done\n"
      ]
     }
@@ -84,8 +81,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 16 ms, sys: 0 ns, total: 16 ms\n",
-      "Wall time: 15.8 ms\n"
+      "CPU times: user 20 ms, sys: 0 ns, total: 20 ms\n",
+      "Wall time: 19.6 ms\n"
      ]
     }
    ],
@@ -118,11 +115,11 @@
       "\n",
       "[idx = 28336, cos = 0.502] 19일 치러진 3차 미국 대선 토론 뉴스1  대선 3차 토론 클린턴 3연승 대선 승리 다져  서울 뉴스1 윤지원 기자 힐러리 클린턴 미국 민주당 대통령 후보와 도널드 트럼프 공화당 후보가 19일 현지시간 3차 대선 토론에서 마지막 설전을 벌였다  90분간 진행된 이날 토론은 후보들간 막말이 오가고 재단 비리 이메일 스캔들 성추문 등 상대 후보의 약점을 파고 ...\n",
       "\n",
-      "[idx = 29434, cos = 0.498] 앵커  미국 대선의 마지막 토론에서 트럼프가 대선에 불복할 수 있다는 뜻을 강력히 나타냈습니다 두 후보는 안보와 외교 정책에서 평행선을 달렸고 상대를 향한 비난의 수위도 높았습니다  김소현 기자입니다  기자  크리스 월러스 3차 토론 진행자 이번 선거의 결과를 분명히 받아들일 겁니까  도널드 트럼프 공화당 대선후보 그때 가서 보겠습니다 지금은 아무것도 말할 ...\n",
-      "\n",
       "[idx = 2942, cos = 0.486] 신시내티 뉴시스 도널드 트럼프 미국 공화당 대선후보가 13일 현지시간 오하이오주 신시내티에서 열린 유세 도중 움켜쥔 오른손을 들어올리고 있다 2016 10 14  서울 뉴시스 이지예 기자 미국 민주당 대선 후보 힐러리 클린턴과 공화당 도널드 트럼프가 19일 현지시간 3차 토론에서 마지막 승부를 겨룬다  선거일 11월 8일 은 이제 21일 앞으로 다가왔다   ...\n",
       "\n",
       "[idx = 28424, cos = 0.486] 힐러리 클린턴 미국 민주당 대통령 후보 왼쪽 와 도널드 트럼프 공화당 후보가 19일 현지시간 라스베이거스 네바다주립대학에서 3차 토론을 치렀다 뉴스1  대선 3차 토론  서울 뉴스1 최종일 기자 정이나 기자 윤지원 기자 미국 대선 최종 토론에서 도널드 트럼프 공화당 대통령 후보가 대선 결과에 불복할 수 있음을 강하게 시사했다 힐러리 클린턴 민주당 후보는 미 ...\n",
+      "\n",
+      "[idx = 17330, cos = 0.484] 워싱턴 노컷뉴스 임미현 특파원 미국 공화당 대선 후보 도널드 트럼프가 대선 결과에 불복할 수 있음을 시사해 파장이 일고 있다  트럼프는 19일 현지시간 네바다주 라스베이거스 네바다 대학에서 열린 3차 토론에서 대선에서 패배할 경우 결과에 승복하겠느냐는 사회자 크리스 윌리스의 질문에 그때 가서 말하겠다 고 답했다  트럼프는 대선 결과를 받아들이는 미국의 전통 ...\n",
       "\n"
      ]
     }
